k8s/local/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multichain-dex
  labels:
    app.kubernetes.io/part-of: multichain-dex
